--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,4 @@
-group 'flutter.tflite_audio' //do not edit
+group 'flutter.tflite_sound_classification' //do not edit
 version '1.0'
 
 buildscript {
@@ -29,7 +29,7 @@ android {
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
-        minSdkVersion 19
+        minSdkVersion 23
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         
     }
@@ -50,7 +50,7 @@ android {
     dependencies{
         implementation "androidx.appcompat:appcompat:1.1.0"
         implementation 'androidx.annotation:annotation:1.1.0'
-        compile 'org.tensorflow:tensorflow-lite:+'
+        implementation 'org.tensorflow:tensorflow-lite-task-audio:0.2.0'
         // compile 'org.tensorflow:tensorflow-lite-select-tf-ops:+'
         // implementation 'org.tensorflow:tensorflow-lite:0.1.100'
         // implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.1.100'
