--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: tflite_audio_example
-description: Demonstrates how to use the tflite_audio plugin.
+name: tflite_sound_classification_example
+description: Demonstrates how to use the tflite_sound_classification plugin.
 publish_to: 'none'
 
 environment:
@@ -17,7 +17,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  tflite_audio:
+  tflite_sound_classification:
     path: ../
 
 # For information on the generic Dart part of this file, see the
@@ -33,10 +33,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/decoded_wav_model.tflite
-    - assets/decoded_wav_label.txt
-    - assets/google_teach_machine_model.tflite
-    - assets/google_teach_machine_label.txt
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
