--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: tflite_audio
+name: tflite_sound_classification
 maintainer: Michael Nguyen
-description: Audio classification Tflite package for flutter (iOS & Android). Can support Google Teachable Machine models. 
+description: Audio classification Tflite package for flutter (iOS & Android).
 version: 0.1.8+1
-homepage: https://github.com/Caldarie/flutter_tflite_audio
+homepage: https://github.com/6phere/flutter_tflite_sound_classification
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -21,7 +21,7 @@ flutter:
   plugin:
     platforms:
       android:
-        package: flutter.tflite_audio
+        package: flutter.tflite_sound_classification
         pluginClass: TfliteAudioPlugin
       ios:
         pluginClass: TfliteAudioPlugin
